# spinnaker-adapters

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
examples/receive/: receive.music  spike_io.py
examples/send/: send.music  spike_io.py
src/: Makefile  Makefile.am  MusicInputAdapter.cpp  MusicInputAdapter.h  MusicOutputAdapter.cpp  MusicOutputAdapter.h  rtclock.cpp  rtclock.h  spinnmusic-in.cpp  spinnmusic-out.cpp
